--- a/base-project/index.html
+++ b/base-project/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+    <link rel="stylesheet" href="./style.css">
     <script src="script.js" defer></script> 
     <!-- defer = 페이지가 모두 로드된 후에 해당 외부 스크립트 실행 default false-->
 </head>
