--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -26,6 +26,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="./css/style.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js" integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="./js/script.js" defer></script>
   <!-- defer = 페이지가 모두 로드된 후에 해당 외부 스크립트 실행 default false-->
 </head>
@@ -362,7 +364,40 @@
       </ul>
 
     </div>
+
+    <div class="badges">
+      <div class="badge">
+        <img src="./images/badge1.jpg" alt="badge1"/>
+      </div>
+
+      <div class="badge">
+        <img src="./images/badge2.jpg" alt="badge2"/>
+      </div>
+    </div>
   </header>
+
+  <!-- VISUAL -->
+  <section class="visual">
+    <div class="inner">
+
+      <div class="title fade-in">
+        <img src="./images/visual_title.png" alt="STARBUCKS DELIGHTFUL START TO THE YEARS"/>
+        <a href="#" class="btn btn--brown">자세히 보기</a>
+      </div>
+      <div class="fade-in">
+        <img src="./images/visual_cup1.png" alt="NEW OATMEAL LATTE" class="cup1 image"/>
+        <img src="./images/visual_cup1_text.png" alt="오트밀 라떼" class="cup1 text"/>
+      </div>
+      <div class="fade-in">
+        <img src="./images/visual_cup2.png" alt="NEW STABUCK CARAMEL CRUMBLE MOCHA" class="cup2 image"/>
+        <img src="./images/visual_cup2_text.png" alt="카라멜 크럼블 모카" class="cup2 text"/>
+      </div>
+      <div class="fade-in">
+        <img src="./images/visual_spoon.png" alt="Spoon" class="spoon"/>
+      </div>
+
+    </div>
+  </section>
 </body>
 
 </html>
