--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -38,6 +38,7 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
+  <!-- <script src="./js/youtube.js" defer></script> -->
   <script src="./js/script.js" defer></script>
   <!-- defer = 페이지가 모두 로드된 후에 해당 외부 스크립트 실행 default false-->
 </head>
@@ -480,6 +481,97 @@
       </div>
     </div>
   </section>
+
+  <!-- REWARDS -->
+  <section class="rewards">
+    <div class="bg-left"></div>
+    <div class="bg-right"></div>
+    <div class="inner">
+      <div class="btn-group">
+        <div class="btn btn--reverse sign-up">회원가입</div>
+        <div class="btn sign-in">로그인</div>
+        <div class="btn gift">e-Gift 선물하기</div>
+      </div>
+    </div>
+  </section>
+
+  <!-- YOUTUBE VIDEO -->
+  <section class="youtube">
+    <div class="youtube__area">
+        <div id="player">
+
+        </div>
+    </div>
+    <div class="youtube__cover">
+      <div class="inner">
+        <img src="./images/floating1.png" alt="Icon" class="floating floating1"/>
+        <img src="./images/floating2.png" alt="Icon" class="floating floating2"/>
+      </div>
+    </div>
+  </section>
+
+  <!-- SEASON PRODUCT -->
+  <section class="season-product">
+    <div class="inner">
+      <img src="./images/floating3.png" alt="Icon" class="floating floating3"/>
+      <img src="./images/season_product_image.png" alt="" class="product"/>
+      <div class="text-group">
+        <img src="./images/season_product_text1.png" alt="" class="title"/>
+        <img src="./images/season_product_text2.png" alt="" class="description"/>
+        <div class="more">
+          <a href="#" class="btn">자세히 보기</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- RESERVE COFFEE -->
+  <section class="reserve-coffee">
+    <div class="inner">
+
+      <img src="./images/reserve_logo.png" alt="logo" class="reserve-logo"/>
+
+      <div class="text-group">
+        <img src="./images/reserve_text.png" alt="" class="description">
+        <div class="more">
+          <a href="#" class="btn btn--gold">자세히 보기</a>
+        </div>
+      </div>
+
+      <img src="./images/reserve_image.png" alt="" class="product"/>
+    </div>
+  </section>
+
+  <!-- PICK YOUR FAVORITE -->
+  <section class="pick-your-favorite">
+    <div class="inner">
+      <div class="text-group">
+        <img src="./images/favorite_text1.png" alt="" class="title"/>
+        <img src="./images/favorite_text2.png" alt="" class="description"/>
+        <div class="more">
+          <a href="#" class="btn btn--white">자세히 보기</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- RESERVE STORE -->
+  <section class="reserve-store">
+
+    <div class="inner">
+
+      <div class="medal">
+        <div class="front">
+          <img src="./images/reserve_store_medal_front.png" alt="" />
+        </div>
+        <div class="back">
+          <img src="./images/reserve_store_medal_back.png" alt="" />
+          <a href="#" class="btn">매장안내</a>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
+
